--- a/NotAnotherAnimeTheme.theme.css
+++ b/NotAnotherAnimeTheme.theme.css
@@ -21,7 +21,7 @@
   /*
     Theme Background
   */
-  --theme-background-image: url(https://images6.alphacoders.com/129/1298870.jpg);
+  --theme-background-image: url(https://initiate.alphacoders.com/images/129/stretched-1366-768-1298870.jpg?4873);
 
   /*
     Main Theme Color
