--- a/NotAnotherAnimeTheme.theme.css
+++ b/NotAnotherAnimeTheme.theme.css
@@ -21,7 +21,7 @@
   /*
     Theme Background
   */
-  --theme-background-image: url(https://initiate.alphacoders.com/images/129/stretched-1366-768-1298870.jpg?4873);
+  --theme-background-image: url(https://preview.redd.it/springbloom-missive-by-blackmeow-v0-89y71awesija1.jpg?auto=webp&s=b1b1da7dd06fb43850fe98da51cefaf7c0dcf083);
 
   /*
     Main Theme Color
@@ -36,7 +36,7 @@
   /*
     Home Icon Image
   */
-  --home-icon-image: url(https://i.imgur.com/63g6Em8.jpg);
+  --home-icon-image: url(https://th.bing.com/th/id/R.39b8593b98854efed9023aa747982816?rik=n6X7Eo6gL5JtHA&pid=ImgRaw&r=0);
 
   /*
     Change your friends icon image position
@@ -55,7 +55,7 @@
     Triple Column:  184px
     Quad Column:    242px
   */
-  --server-listing-width: 126px;
+  --server-listing-width: 62px;
 
   /*
     Font Size
