--- a/NotAnotherAnimeTheme.theme.css
+++ b/NotAnotherAnimeTheme.theme.css
@@ -21,7 +21,7 @@
   /*
     Theme Background
   */
-  --theme-background-image: url(https://preview.redd.it/springbloom-missive-by-blackmeow-v0-89y71awesija1.jpg?auto=webp&s=b1b1da7dd06fb43850fe98da51cefaf7c0dcf083);
+  --theme-background-image: url(https://c.wallhere.com/photos/5c/e0/Genshin_Impact_Kamisato_Ayaka_Genshin_Impact_anime_eyes_anime_anime_girls_Twitter_flower_game_white-2209427.jpg!d);
 
   /*
     Main Theme Color
