--- a/NotAnotherAnimeTheme.theme.css
+++ b/NotAnotherAnimeTheme.theme.css
@@ -21,7 +21,7 @@
   /*
     Theme Background
   */
-  --theme-background-image: url(https://c.wallhere.com/photos/5c/e0/Genshin_Impact_Kamisato_Ayaka_Genshin_Impact_anime_eyes_anime_anime_girls_Twitter_flower_game_white-2209427.jpg!d);
+  --theme-background-image: url(https://s1.zerochan.net/Doremichord.600.3237982.jpg);
 
   /*
     Main Theme Color
